# horifightingcommander-i2c-rpi

./: CMakeLists.txt  HoriFightingCommander-i2c.sln  HoriFightingCommander-i2c.vcxproj  HoriFightingCommander-i2c.vcxproj.filters  LICENSE  Makefile  README.md  i2c-hori-controller.c
service/: 99-hori-i2c-controller.rules  hori-i2c-controller.service
